Fixing bugs: Modal, Home, Header and portfolio
Modal close button position
Hiding settings engine icon
Home text overlapping header
Portfolio description div sizes to %

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -140,7 +140,6 @@ section#home {
     }
 
   & .headline {
-    z-index: 10;
     position: relative;
     padding: 1rem;
 
@@ -210,8 +209,8 @@ section#portfolio {
 
         & .description {
           box-shadow: var(--box-shadow);
-          width: $displayWidth;
-          height: 300px;
+          width: 100%;
+          height: 100%;
           padding: 15px;
           text-align: center;
           flex-direction: column;
